spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,12 @@ body{
 
 #messageToday{
 	padding-top: 3%;
-	font-size: 20px;
+	font-size: 180%;
 	padding-bottom: 10%;
+}
+
+#myBox{
+	margin-top: 4%;
 }
 
 #myFooter {
@@ -20,8 +24,8 @@ body{
 	bottom: 0;
 	width: 100%;
 	/* Set the fixed height of the footer here */
-	height: 15%;
-	
+	height: 35%;
+
 }
 
 #myButton{
